--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,9 @@ section {
 .history-section iframe {
     display: block;
     width: 100%;
-    margin: 1em auto;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
